// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components App 1`] = `
<div
  className="App"
>
  <div
    className="main-content"
  >
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark bg-dark"
    >
      <a
        className="navbar-brand"
        href="/home"
        title="Home"
      >
        Housing Hub
      </a>
      <button
        aria-controls="responsive-navbar-nav"
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
        id="responsive-navbar-nav"
      >
        <div
          className="flex-lg-fill navbar-nav"
          onKeyDown={[Function]}
        >
          <a
            className="nav-link"
            data-rb-event-key={null}
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <a
              className="text-white text-decoration-none h-hub-nav-link"
              href="/about"
              onClick={[Function]}
              title="Learn more about Code-For-Charlottesville!"
            >
              About
            </a>
          </a>
          <form
            className="flex-fill nav-toggle form-inline"
          >
            <input
              className="search-input form-control"
              id="nav-search"
              placeholder="Search"
              searchtype="text"
            />
            <button
              className="search-button btn btn-light"
              disabled={false}
              type="button"
            >
              <svg
                className="bi bi-search"
                fill="currentColor"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"
                  fill-rule="evenodd"
                />
                <path
                  d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </form>
          <div
            className="dropdown nav-item"
            onKeyDown={[Function]}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle nav-link"
              data-rb-event-key={null}
              href="#"
              id="Navbar-user-dropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              2ad0a95a-8e94-4c2b-b6aa-4c07fb7a1575
            </a>
          </div>
        </div>
      </div>
    </nav>
    <div>
      <div
        className="search-page row"
      >
        <div
          className="pr-0 border col-xl-2 col-lg-3 col-12"
        >
          <div
            className="size border"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": "50px",
                }
              }
            >
              <h5
                style={
                  Object {
                    "color": "grey",
                    "fontFamily": "Roboto",
                    "fontSize": "16px",
                    "fontWeight": "bold",
                    "paddingLeft": "12px",
                    "paddingTop": "50px",
                  }
                }
              >
                Search Fields
              </h5>
            </div>
            <hr
              style={
                Object {
                  "borderWidth": "3px",
                }
              }
            />
            <div>
              <p
                style={
                  Object {
                    "fontFamily": "Roboto",
                    "fontSize": "14px",
                    "marginBottom": "5px",
                    "paddingLeft": "15px",
                  }
                }
              >
                Rent per unit
              </p>
              <form
                className=""
              >
                <div
                  className="form-row"
                  style={
                    Object {
                      "marginBottom": "5px",
                      "paddingLeft": "15px",
                      "paddingRight": "15px",
                    }
                  }
                >
                  <div
                    className="col"
                  >
                    <input
                      className="form-control"
                      onChange={[Function]}
                      placeholder="Max"
                    />
                  </div>
                  <div
                    className="col"
                  >
                    <input
                      className="form-control"
                      onChange={[Function]}
                      placeholder="Max"
                    />
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="col"
                  >
                    <p
                      style={
                        Object {
                          "fontFamily": "Roboto",
                          "fontSize": "13px",
                          "paddingLeft": "20px",
                        }
                      }
                    >
                      Min
                    </p>
                  </div>
                  <div
                    className="col"
                  >
                    <p
                      style={
                        Object {
                          "fontFamily": "Roboto",
                          "fontSize": "13px",
                          "paddingLeft": "0px",
                        }
                      }
                    >
                      Max
                    </p>
                  </div>
                </div>
                <div
                  className="form-row"
                  style={
                    Object {
                      "marginTop": "17px",
                      "paddingLeft": "15px",
                      "paddingRight": "15px",
                    }
                  }
                >
                  <div
                    className="col-12"
                  >
                    <label
                      className="form-label"
                    >
                      Date Available
                    </label>
                    <input
                      className="form-control"
                      onChange={[Function]}
                      placeholder="MM-dd-YYYY"
                      type="date"
                    />
                  </div>
                </div>
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginTop": "24px",
                      "paddingLeft": "9px",
                      "paddingRight": "9px",
                    }
                  }
                >
                  <label
                    className="form-label"
                    htmlFor="bedrooms"
                  >
                    Bedrooms
                  </label>
                  <select
                    className="custom-select"
                    id="numBeds"
                    onChange={[Function]}
                    value={4}
                  >
                    <option>
                      1
                    </option>
                    <option>
                      2
                    </option>
                    <option>
                      3
                    </option>
                    <option>
                      4
                    </option>
                    <option>
                      5
                    </option>
                    <option>
                      6
                    </option>
                    <option>
                      7
                    </option>
                  </select>
                </div>
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginTop": "15px",
                      "paddingLeft": "9px",
                      "paddingRight": "9px",
                    }
                  }
                >
                  <label
                    className="form-label"
                    htmlFor="bathrooms"
                  >
                    Bathrooms
                  </label>
                  <select
                    className="custom-select"
                    id="numBath"
                    onChange={[Function]}
                    value={3.5}
                  >
                    <option>
                      1
                    </option>
                    <option>
                      1.5
                    </option>
                    <option>
                      2
                    </option>
                    <option>
                      2.5
                    </option>
                    <option>
                      3
                    </option>
                    <option>
                      3.5
                    </option>
                    <option>
                      4
                    </option>
                    <option>
                      4.5
                    </option>
                    <option>
                      5
                    </option>
                  </select>
                </div>
                <div
                  className="form-row"
                  style={
                    Object {
                      "marginTop": "20px",
                    }
                  }
                >
                  <div
                    className="col-10"
                    style={
                      Object {
                        "paddingLeft": "15px",
                      }
                    }
                  >
                    Deposit Needed
                  </div>
                  <div
                    className="col-1"
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        aria-label="deposit"
                        className="form-check-input position-static"
                        disabled={false}
                        onChange={[Function]}
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="form-row"
                  style={
                    Object {
                      "marginTop": "4px",
                    }
                  }
                >
                  <div
                    className="col-10"
                    style={
                      Object {
                        "paddingLeft": "15px",
                      }
                    }
                  >
                    Credit Report Needed
                  </div>
                  <div
                    className="col-1"
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        aria-label="creditReport"
                        className="form-check-input position-static"
                        disabled={false}
                        onChange={[Function]}
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="form-row"
                  style={
                    Object {
                      "marginTop": "4px",
                    }
                  }
                >
                  <div
                    className="col-10"
                    style={
                      Object {
                        "paddingLeft": "15px",
                      }
                    }
                  >
                    Near Bus Stop
                  </div>
                  <div
                    className="col-1"
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        aria-label="bus"
                        className="form-check-input position-static"
                        disabled={false}
                        onChange={[Function]}
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="form-row"
                  style={
                    Object {
                      "marginBottom": "30px",
                      "marginTop": "4px",
                    }
                  }
                >
                  <div
                    className="col-10"
                    style={
                      Object {
                        "paddingLeft": "15px",
                      }
                    }
                  >
                    Pets allowed
                  </div>
                  <div
                    className="col-1"
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        aria-label="pets"
                        className="form-check-input position-static"
                        disabled={false}
                        onChange={[Function]}
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
                <hr
                  style={
                    Object {
                      "borderWidth": "2px",
                      "margin": "15px",
                    }
                  }
                />
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginTop": "15px",
                      "paddingLeft": "9px",
                      "paddingRight": "9px",
                    }
                  }
                >
                  <label
                    className="form-label"
                    htmlFor="schoolDistrict"
                  >
                    School District
                  </label>
                  <select
                    className="custom-select"
                    id="schoolDistrict"
                    onChange={[Function]}
                  >
                    <option>
                      Alemarle
                    </option>
                    <option>
                      City of Charlottesville
                    </option>
                    <option>
                      University of Virginia
                    </option>
                  </select>
                </div>
                <hr
                  style={
                    Object {
                      "borderWidth": "2px",
                      "margin": "15px",
                    }
                  }
                />
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginTop": "15px",
                      "paddingLeft": "9px",
                      "paddingRight": "9px",
                    }
                  }
                >
                  <label
                    className="form-label"
                    htmlFor="leaseType"
                  >
                    Lease Type
                  </label>
                  <select
                    className="custom-select"
                    id="leaseType"
                  >
                    <option>
                      Month to Month
                    </option>
                    <option>
                      2
                    </option>
                    <option>
                      3
                    </option>
                    <option>
                      4
                    </option>
                    <option>
                      5
                    </option>
                  </select>
                </div>
                <hr
                  style={
                    Object {
                      "borderWidth": "2px",
                      "margin": "15px",
                    }
                  }
                />
                <div
                  className="form-group"
                  style={
                    Object {
                      "marginTop": "15px",
                      "paddingLeft": "9px",
                      "paddingRight": "9px",
                    }
                  }
                >
                  <label
                    className="form-label"
                    htmlFor="vouchers"
                  >
                    Vouchers Accepted
                  </label>
                  <select
                    className="custom-select"
                    id="vouchers"
                    onChange={[Function]}
                  >
                    <option>
                      Any
                    </option>
                    <option>
                      2
                    </option>
                    <option>
                      3
                    </option>
                    <option>
                      4
                    </option>
                    <option>
                      5
                    </option>
                  </select>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          className="pl-0 search-table col-xl-10 col-lg-9 col-12"
        >
          
          <div
            className="border mb-4"
          >
            <table
              className="table table-hover"
            >
              <thead
                className="bg-info text-white"
              >
                <tr>
                  <th>
                    Property Type
                  </th>
                  <th>
                    Address
                  </th>
                  <th>
                    Rent
                  </th>
                  <th>
                    Bedrooms
                  </th>
                  <th>
                    Bathrooms
                  </th>
                  <th>
                    Delete
                  </th>
                </tr>
              </thead>
              <tbody />
            </table>
          </div>
          <div
            className="text-center pagination ml-3 row"
          >
            <div
              className="col-sm-1"
            />
            <div
              className="col-sm-9"
            >
              <ul />
            </div>
            <div
              className="col-sm-2"
            >
              <button
                className="justify-end btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Add Property
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="container-fluid navbar-dark bg-dark text-center align-middle App-footer"
  >
    <div
      className="footer-text"
    >
      ©Code for Charlottesville |
       
      <a
        href="https://brigade.codeforamerica.org/brigades/Code-for-Charlottesville/"
      >
        Brigade Website
      </a>
       
      | 
      <a
        href="/LICENSE"
      >
        License
      </a>
       | 
      <a
        href="/VERSION"
      >
        Version
      </a>
    </div>
    <span
      className="text-right"
    >
       Copyright Housing Hub 
    </span>
  </footer>
</div>
`;

exports[`components Footer 1`] = `
<footer
  className="container-fluid navbar-dark bg-dark text-center align-middle App-footer"
>
  <div
    className="footer-text"
  >
    ©Code for Charlottesville |
     
    <a
      href="https://brigade.codeforamerica.org/brigades/Code-for-Charlottesville/"
    >
      Brigade Website
    </a>
     
    | 
    <a
      href="/LICENSE"
    >
      License
    </a>
     | 
    <a
      href="/VERSION"
    >
      Version
    </a>
  </div>
  <span
    className="text-right"
  >
     Copyright Housing Hub 
  </span>
</footer>
`;

exports[`components InputField 1`] = `
<div>
  <label />
  <div>
    <input
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`components InputFieldNum 1`] = `
<div>
  <label />
  <div>
    <input
      min="0"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`components LoadingSpinner 1`] = `
<div
  className="spinner-border"
  role="status"
/>
`;

exports[`components Logout 1`] = `
<div
  className="spinner-border"
  role="status"
/>
`;

exports[`components Navbar 1`] = `
<nav
  className="container-fluid navbar navbar-expand-lg navbar-dark bg-dark"
>
  <a
    className="navbar-brand"
    href="/home"
    title="Home"
  >
    Housing Hub
  </a>
  <button
    aria-controls="responsive-navbar-nav"
    aria-label="Toggle navigation"
    className="navbar-toggler collapsed"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    aria-expanded={null}
    className="navbar-collapse collapse"
    id="responsive-navbar-nav"
  >
    <div
      className="flex-lg-fill navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="nav-link"
        data-rb-event-key={null}
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <a
          className="text-white text-decoration-none h-hub-nav-link"
          href="/about"
          onClick={[Function]}
          title="Learn more about Code-For-Charlottesville!"
        >
          About
        </a>
      </a>
      <form
        className="flex-fill nav-toggle form-inline"
      >
        <input
          className="search-input form-control"
          id="nav-search"
          placeholder="Search"
          searchtype="text"
        />
        <button
          className="search-button btn btn-light"
          disabled={false}
          type="button"
        >
          <svg
            className="bi bi-search"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"
              fill-rule="evenodd"
            />
            <path
              d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </form>
      <div
        className="dropdown nav-item"
        onKeyDown={[Function]}
      >
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle nav-link"
          data-rb-event-key={null}
          href="#"
          id="Navbar-user-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          2ad0a95a-8e94-4c2b-b6aa-4c07fb7a1575
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`components NewPropForm 1`] = `
<div
  className="container"
>
  <h1>
    Add New Property
  </h1>
  <hr />
  <h2>
    Property Details
  </h2>
  <form
    action=""
    onSubmit={[Function]}
  >
    <div>
      <div>
        <label>
          Property Name (if multi-unit complex): 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Flats"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Address: 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. 1111 Main Street"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Unit / Apt no. (if applicable): 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Apt B"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Floor no. (if applicable): 
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 2"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label>
          Zip Code: 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. 22902"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Type of Housing: 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Apartment"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="numBeds"
        >
          Number of Bedrooms:
        </label>
        <div>
          <select
            id="numBeds"
            onChange={[Function]}
            value={0}
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="6"
            >
              6
            </option>
            <option
              value="7"
            >
              7
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="numBath"
        >
          Number of Bathrooms:
        </label>
        <div>
          <select
            id="numBath"
            onChange={[Function]}
            value={0}
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="1.5"
            >
              1.5
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="2.5"
            >
              2.5
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="3.5"
            >
              3.5
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="4.5"
            >
              4.5
            </option>
            <option
              value="5"
            >
              5
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="numBathsShared"
        >
          Number of Shared Bathrooms (with another property):
        </label>
        <div>
          <select
            id="numBathsShared"
            onChange={[Function]}
            value={0}
          >
            <option
              value="0"
            >
              0
            </option>
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="basementBool"
        >
          Does the Property Have a Basement?
        </label>
        <div>
          <select
            id="basementBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label>
          Property's School District: 
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Albermale"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="busLineBool"
        >
          Is the Property Near a Bus Stop?
        </label>
        <div>
          <select
            id="busLineBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="wheelchairBool"
        >
          Is the Property Wheelchair Accessible?
        </label>
        <div>
          <select
            id="wheelchairBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="elevatorBool"
        >
          Does the Property Have an Elevator?
        </label>
        <div>
          <select
            id="elevatorBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label>
          If not yet available, please specify below when the property will be available using the format MM-dd-YYYY. The default will be the current date if left as is.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="MM-dd-YYYY"
            type="date"
          />
        </div>
      </div>
      <div>
        <label>
          Please specify the potential months available for the property.
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 12"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label>
          Please specify below when the property was first listed using the format MM-dd-YYYY. The default will be the current date if left as is.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. 01-15-2020"
            type="date"
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="whereListed"
        >
          Please check the locations where this property was listed.
        </label>
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Trulia"
          />
          Trulia
        </label>
        <br />
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Zillow"
          />
          Zillow
        </label>
        <br />
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Other"
          />
          Other
        </label>
      </div>
      <div>
        <label
          htmlFor="contactMethod"
        >
          Please check the preferred contact methods for the property's landlord.
        </label>
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Phone"
          />
          Phone
        </label>
        <br />
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Email"
          />
          Email
        </label>
        <br />
        <label>
          <input
            onChange={[Function]}
            type="checkbox"
            value="Registered sites"
          />
          Registered Site
        </label>
      </div>
      <div>
        <label>
          Please specify below when the property's landlord was last contacted.  The default will be the current date if left as is.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="MM-dd-YYY"
            type="date"
          />
        </div>
      </div>
    </div>
    <h2>
      Payment Details
    </h2>
    <div
      className="box"
    >
      <div>
        <label>
          What is the Monthly Rent of the Property?
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 1200"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label>
          Please specify the application fee, if any, for the property.
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 250"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label>
          Please specify the deposit amount for the property
        </label>
        <div>
          <input
            min="0"
            onChange={[Function]}
            placeholder="Ex. 800"
            type="number"
            value={0}
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="lastMonthBool"
        >
          Is the last month's rent required for the property?
        </label>
        <div>
          <select
            id="lastMonthBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
      <div>
        <label
          htmlFor="vouchersAccepted"
        >
          Please specify 'Yes' or 'No' for the vouchers accepted as payment for the property.
        </label>
        <div>
          <label>
            CSRAP
          </label>
          <div>
            <label>
              <input
                name="CSRAP"
                onChange={[Function]}
                type="radio"
                value="CSRAP"
              />
              Yes
            </label>
            <label>
              <input
                name="CSRAP"
                onChange={[Function]}
                type="radio"
                value="CSRAP"
              />
              No
            </label>
          </div>
        </div>
        <div>
          <label>
            HCV
          </label>
          <div>
            <label>
              <input
                name="HCV"
                onChange={[Function]}
                type="radio"
                value="HCV"
              />
              Yes
            </label>
            <label>
              <input
                name="HCV"
                onChange={[Function]}
                type="radio"
                value="HCV"
              />
              No
            </label>
          </div>
        </div>
        <div>
          <label>
            MSV
          </label>
          <div>
            <label>
              <input
                name="MSV"
                onChange={[Function]}
                type="radio"
                value="MSV"
              />
              Yes
            </label>
            <label>
              <input
                name="MSV"
                onChange={[Function]}
                type="radio"
                value="MSV"
              />
              No
            </label>
          </div>
        </div>
        <div>
          <label>
            Voucher 4
          </label>
          <div>
            <label>
              <input
                name="Voucher 4"
                onChange={[Function]}
                type="radio"
                value="Voucher 4"
              />
              Yes
            </label>
            <label>
              <input
                name="Voucher 4"
                onChange={[Function]}
                type="radio"
                value="Voucher 4"
              />
              No
            </label>
          </div>
        </div>
        <div>
          <label>
            Voucher 5
          </label>
          <div>
            <label>
              <input
                name="Voucher 5"
                onChange={[Function]}
                type="radio"
                value="Voucher 5"
              />
              Yes
            </label>
            <label>
              <input
                name="Voucher 5"
                onChange={[Function]}
                type="radio"
                value="Voucher 5"
              />
              No
            </label>
          </div>
        </div>
      </div>
      <div>
        <label>
          If the property requires a credit screening, please specify the credit screening company used.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. Creditrating.com"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label>
          Please specify the company typically used to conduct background checks for the property.
        </label>
        <div>
          <input
            onChange={[Function]}
            placeholder="Ex. background-screening.com"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          className="label"
          htmlFor="backgroundBool"
        >
          Does the property require applicants to have a clean criminal record?
        </label>
        <div>
          <select
            id="backgroundBool"
            onChange={[Function]}
            value={false}
          >
            <option
              value="false"
            >
              No
            </option>
            <option
              value="true"
            >
              Yes
            </option>
          </select>
        </div>
      </div>
    </div>
    <label>
      If all fields above are filled out correctly press 'Submit' to add this listing.
    </label>
    <div>
      <div>
        <button
          onClick={[Function]}
          title="Add property"
        >
          Submit
        </button>
      </div>
      <div>
        <button
          title="Return home"
        >
          Cancel
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`components Pagination 1`] = `<ul />`;

exports[`components PaymentDetailsForm 1`] = `
<div
  className="box"
>
  <div>
    <label>
      What is the Monthly Rent of the Property?
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 1200"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label>
      Please specify the application fee, if any, for the property.
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 250"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label>
      Please specify the deposit amount for the property
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 800"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="lastMonthBool"
    >
      Is the last month's rent required for the property?
    </label>
    <div>
      <select
        id="lastMonthBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="vouchersAccepted"
    >
      Please specify 'Yes' or 'No' for the vouchers accepted as payment for the property.
    </label>
    <div>
      <label>
        CSRAP
      </label>
      <div>
        <label>
          <input
            name="CSRAP"
            onChange={[Function]}
            type="radio"
            value="CSRAP"
          />
          Yes
        </label>
        <label>
          <input
            name="CSRAP"
            onChange={[Function]}
            type="radio"
            value="CSRAP"
          />
          No
        </label>
      </div>
    </div>
    <div>
      <label>
        HCV
      </label>
      <div>
        <label>
          <input
            name="HCV"
            onChange={[Function]}
            type="radio"
            value="HCV"
          />
          Yes
        </label>
        <label>
          <input
            name="HCV"
            onChange={[Function]}
            type="radio"
            value="HCV"
          />
          No
        </label>
      </div>
    </div>
    <div>
      <label>
        MSV
      </label>
      <div>
        <label>
          <input
            name="MSV"
            onChange={[Function]}
            type="radio"
            value="MSV"
          />
          Yes
        </label>
        <label>
          <input
            name="MSV"
            onChange={[Function]}
            type="radio"
            value="MSV"
          />
          No
        </label>
      </div>
    </div>
    <div>
      <label>
        Voucher 4
      </label>
      <div>
        <label>
          <input
            name="Voucher 4"
            onChange={[Function]}
            type="radio"
            value="Voucher 4"
          />
          Yes
        </label>
        <label>
          <input
            name="Voucher 4"
            onChange={[Function]}
            type="radio"
            value="Voucher 4"
          />
          No
        </label>
      </div>
    </div>
    <div>
      <label>
        Voucher 5
      </label>
      <div>
        <label>
          <input
            name="Voucher 5"
            onChange={[Function]}
            type="radio"
            value="Voucher 5"
          />
          Yes
        </label>
        <label>
          <input
            name="Voucher 5"
            onChange={[Function]}
            type="radio"
            value="Voucher 5"
          />
          No
        </label>
      </div>
    </div>
  </div>
  <div>
    <label>
      If the property requires a credit screening, please specify the credit screening company used.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Creditrating.com"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Please specify the company typically used to conduct background checks for the property.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. background-screening.com"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label
      className="label"
      htmlFor="backgroundBool"
    >
      Does the property require applicants to have a clean criminal record?
    </label>
    <div>
      <select
        id="backgroundBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`components PropDetailsForm 1`] = `
<div>
  <div>
    <label>
      Property Name (if multi-unit complex): 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Flats"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Address: 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. 1111 Main Street"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Unit / Apt no. (if applicable): 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Apt B"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Floor no. (if applicable): 
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 2"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label>
      Zip Code: 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. 22902"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label>
      Type of Housing: 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Apartment"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="numBeds"
    >
      Number of Bedrooms:
    </label>
    <div>
      <select
        id="numBeds"
        onChange={[Function]}
        value={0}
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="5"
        >
          5
        </option>
        <option
          value="6"
        >
          6
        </option>
        <option
          value="7"
        >
          7
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="numBath"
    >
      Number of Bathrooms:
    </label>
    <div>
      <select
        id="numBath"
        onChange={[Function]}
        value={0}
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="1.5"
        >
          1.5
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="2.5"
        >
          2.5
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="3.5"
        >
          3.5
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="4.5"
        >
          4.5
        </option>
        <option
          value="5"
        >
          5
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="numBathsShared"
    >
      Number of Shared Bathrooms (with another property):
    </label>
    <div>
      <select
        id="numBathsShared"
        onChange={[Function]}
        value={0}
      >
        <option
          value="0"
        >
          0
        </option>
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="5"
        >
          5
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="basementBool"
    >
      Does the Property Have a Basement?
    </label>
    <div>
      <select
        id="basementBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label>
      Property's School District: 
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. Albermale"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="busLineBool"
    >
      Is the Property Near a Bus Stop?
    </label>
    <div>
      <select
        id="busLineBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="wheelchairBool"
    >
      Is the Property Wheelchair Accessible?
    </label>
    <div>
      <select
        id="wheelchairBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label
      htmlFor="elevatorBool"
    >
      Does the Property Have an Elevator?
    </label>
    <div>
      <select
        id="elevatorBool"
        onChange={[Function]}
        value={false}
      >
        <option
          value="false"
        >
          No
        </option>
        <option
          value="true"
        >
          Yes
        </option>
      </select>
    </div>
  </div>
  <div>
    <label>
      If not yet available, please specify below when the property will be available using the format MM-dd-YYYY. The default will be the current date if left as is.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="MM-dd-YYYY"
        type="date"
      />
    </div>
  </div>
  <div>
    <label>
      Please specify the potential months available for the property.
    </label>
    <div>
      <input
        min="0"
        onChange={[Function]}
        placeholder="Ex. 12"
        type="number"
        value={0}
      />
    </div>
  </div>
  <div>
    <label>
      Please specify below when the property was first listed using the format MM-dd-YYYY. The default will be the current date if left as is.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="Ex. 01-15-2020"
        type="date"
      />
    </div>
  </div>
  <div>
    <label
      htmlFor="whereListed"
    >
      Please check the locations where this property was listed.
    </label>
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Trulia"
      />
      Trulia
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Zillow"
      />
      Zillow
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Other"
      />
      Other
    </label>
  </div>
  <div>
    <label
      htmlFor="contactMethod"
    >
      Please check the preferred contact methods for the property's landlord.
    </label>
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Phone"
      />
      Phone
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Email"
      />
      Email
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Registered sites"
      />
      Registered Site
    </label>
  </div>
  <div>
    <label>
      Please specify below when the property's landlord was last contacted.  The default will be the current date if left as is.
    </label>
    <div>
      <input
        onChange={[Function]}
        placeholder="MM-dd-YYY"
        type="date"
      />
    </div>
  </div>
</div>
`;

exports[`components SearchHousingType 1`] = `
<div>
  <div>
    <label>
      Housing Type
    </label>
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Single Family Home"
      />
      Single Family Home
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Apartment"
      />
      Apartment
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="Shared Apartment"
      />
      Shared Apartment
    </label>
  </div>
</div>
`;

exports[`components SearchZipCode 1`] = `
<div>
  <div>
    <label>
      Zip Codes
    </label>
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="22903"
      />
      22903
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="22904"
      />
      22904
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="22935"
      />
      22935
    </label>
    <br />
    <label>
      <input
        onChange={[Function]}
        type="checkbox"
        value="22987"
      />
      22987
    </label>
  </div>
</div>
`;

exports[`components Table 1`] = `
<table
  className="table table-hover"
>
  <thead
    className="bg-info text-white"
  >
    <tr>
      <th>
        Property Type
      </th>
      <th>
        Address
      </th>
      <th>
        Rent
      </th>
      <th>
        Bedrooms
      </th>
      <th>
        Bathrooms
      </th>
      <th>
        Delete
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;

exports[`components VoucherInputs 1`] = `
<div>
  <label
    htmlFor="vouchersAccepted"
  >
    Please specify 'Yes' or 'No' for the vouchers accepted as payment for the property.
  </label>
  <div>
    <label>
      CSRAP
    </label>
    <div>
      <label>
        <input
          name="CSRAP"
          onChange={[Function]}
          type="radio"
          value="CSRAP"
        />
        Yes
      </label>
      <label>
        <input
          name="CSRAP"
          onChange={[Function]}
          type="radio"
          value="CSRAP"
        />
        No
      </label>
    </div>
  </div>
  <div>
    <label>
      HCV
    </label>
    <div>
      <label>
        <input
          name="HCV"
          onChange={[Function]}
          type="radio"
          value="HCV"
        />
        Yes
      </label>
      <label>
        <input
          name="HCV"
          onChange={[Function]}
          type="radio"
          value="HCV"
        />
        No
      </label>
    </div>
  </div>
  <div>
    <label>
      MSV
    </label>
    <div>
      <label>
        <input
          name="MSV"
          onChange={[Function]}
          type="radio"
          value="MSV"
        />
        Yes
      </label>
      <label>
        <input
          name="MSV"
          onChange={[Function]}
          type="radio"
          value="MSV"
        />
        No
      </label>
    </div>
  </div>
  <div>
    <label>
      Voucher 4
    </label>
    <div>
      <label>
        <input
          name="Voucher 4"
          onChange={[Function]}
          type="radio"
          value="Voucher 4"
        />
        Yes
      </label>
      <label>
        <input
          name="Voucher 4"
          onChange={[Function]}
          type="radio"
          value="Voucher 4"
        />
        No
      </label>
    </div>
  </div>
  <div>
    <label>
      Voucher 5
    </label>
    <div>
      <label>
        <input
          name="Voucher 5"
          onChange={[Function]}
          type="radio"
          value="Voucher 5"
        />
        Yes
      </label>
      <label>
        <input
          name="Voucher 5"
          onChange={[Function]}
          type="radio"
          value="Voucher 5"
        />
        No
      </label>
    </div>
  </div>
</div>
`;
